tests/ui/repr/invalid-repr-simd.stderr
error: free static item without body
  --> $DIR/invalid-repr-simd.rs:9:1
   |
LL | static CLs: Es;
   | ^^^^^^^^^^^^^^-
   |               |
   |               help: provide a definition for the static: `= <expr>;`

error[E0517]: attribute should be applied to a struct
  --> $DIR/invalid-repr-simd.rs:5:8
   |
LL | #[repr(simd)]
   |        ^^^^
...
LL | enum Es {}
   | ---------- not a struct

error[E0517]: attribute should be applied to a struct
  --> $DIR/invalid-repr-simd.rs:12:8
   |
LL |   #[repr(simd)]
   |          ^^^^
LL |
LL | / enum Aligned {
LL | |     Zero = 0,
LL | |     One = 1,
LL | | }
   | |_- not a struct

error[E0084]: unsupported representation for zero-variant enum
  --> $DIR/invalid-repr-simd.rs:5:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
...
LL | enum Es {}
   | ------- zero-variant enum

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0084, E0517.
For more information about an error, try `rustc --explain E0084`.
